fix(housing): housing collapse style fix

--- a/src/Pages/Housing/Housing.css
+++ b/src/Pages/Housing/Housing.css
@@ -42,6 +42,8 @@
 }
 
 .housing-third-layer {
+    width: 98%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
